feat: enhance review metadata handling by adding branch and base branch fields to ReviewContext and related methods